--- a/NikoraApi/appsettings.json
+++ b/NikoraApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "NikoraApiConStr": "server= DEV0013\\SQLEXPRESS;database=NikoraDB;User ID=sa;Password=SAPB1Admin;  TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
